Change pom.xml and refactor the code for java 11